<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5C547467"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="624dp"
        android:text="@string/heading"
        android:textColor="#F50C0C0C"
        android:textSize="24sp"
        tools:text="@string/heading" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="247dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="573dp"
        android:text="@string/fname"
        android:textColor="#111010"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="324dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="476dp"
        android:text="@string/fwr"
        android:textColor="#111010"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"

        android:layout_marginEnd="142dp"
        android:layout_marginBottom="523dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="433dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="109dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="303dp"
        android:background="#ED596445"
        android:text="@string/create"
        android:textColor="#E9E9E4E4"
        tools:text="@string/create" />

    <Button
        android:id="@+id/button3"
        android:layout_width="129dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="258dp"
        android:background="#ED596445"
        android:text="@string/read"
        android:textColor="#E9E9E4E4"
        tools:text="@string/read" />

    <Button
        android:id="@+id/button2"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="21dp"
        android:background="#ED274730"
        android:text="@string/db"
        android:textColor="#E9FAF5F5"
        tools:text="@string/db" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="213dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="193dp" />
</RelativeLayout>