<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60505A3C"
    tools:context=".createTable">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="592dp"
        android:text="@string/ctb"
        android:textColor="#F3000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="525dp"
        android:text="@string/tname" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="462dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button5"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="385dp"
        android:background="#CB323316"
        android:text="@string/create" />
</RelativeLayout>