<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86667959"
    tools:context=".insertRecord">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="172dp"
        android:layout_height="59dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="592dp"
        android:text="TextView"
        android:textColor="#E40E0D0D"
        android:textSize="24sp"
        tools:text="@string/rec" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="154dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="510dp"
        android:text="@string/name"
        android:textColor="#E40E0D0D"
        android:textSize="24sp"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="73dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="378dp"
        android:text="@string/reg"
        android:textColor="#E40E0D0D"
        android:textSize="24sp"
        tools:text="@string/reg" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="137dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="132dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="251dp"
        android:text="@string/sem"
        android:textColor="#E40E0D0D"
        android:textSize="24sp"
        tools:text="@string/sem" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="442dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="311dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="180dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button7"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="133dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="113dp"
        android:background="#DD082E07"
        android:text="@string/rec"
        android:textColor="#FDEEE9E9" />

    <Button
        android:id="@+id/button8"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="133dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="54dp"
        android:background="#DD082E07"
        android:text="@string/view"
        android:textColor="#FDEEE9E9" />

    <TextView
        android:id="@+id/displayContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>